--- a/hosts.html
+++ b/hosts.html
@@ -6,16 +6,16 @@
   </head>
   <body>
     <main role="main" class="container">
+      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
+        <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
+        <nav class="my-0 my-md-0 mr-md-3">
+          <a class="p-2 text-dark" href="/about.html">About</a>
+          <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
+          <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
+          <a class="p-2 text-dark" href="/">Home</a>
+        </nav>
+      </div>
       <div class="bg-white">
-        <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
-          <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
-          <nav class="my-0 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="/about.html">About</a>
-            <a class="p-2 text-dark" href="#"><!---Locations---></a>
-            <a class="p-2 text-dark" href="#"><!---FAQ---></a>
-          </nav>
-          <a class="btn btn-outline-primary" href="#">Contact</a>
-        </div>
         <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
         <p><strong>We are full for 2018! Thanks to all of our hosts! But, if you are interested in hosting, read on, and maybe you can do it next year.</strong></p>
         <p>So, you've always wanted to host a concert? Now's your chance! Porchfest is easy and fun and, as the host, you determine just what you want to do.</p>
