--- a/index.html
+++ b/index.html
@@ -5,20 +5,12 @@
   </head>
   <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
-      <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
       <nav class="my-0 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#"><!---About---></a>
-        <a class="p-2 text-dark" href="#"><!---Locations---></a>
-        <a class="p-2 text-dark" href="#"><!---FAQ---></a>
+        <a class="p-2 text-dark" href="/about.html">About</a>
+        <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
+        <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
       </nav>
-      <a class="btn btn-outline-primary" href="#">Contact</a>
     </div>
-    <!---<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Melrose Porchfest</h1>
-      <p class="lead">
-        Saturday, September 29, 2018
-      </p>
-    </div>--->
     <div class="jumbotron jumbotron-fluid">
       <div class="container mx-auto text-center">
         <img src="/images/porchfest_logo.jpg" />
@@ -32,26 +24,5 @@
         </p>
       </div>
     </div>
-    <!---
-    <div class="container marketing">
-      <div class="row">
-        <div class="col-lg-4">
-          <h2>About</h2>
-          <p></p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Locations</h2>
-          <p></p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>FAQ</h2>
-          <p></p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-        </div>
-      </div>
-    </div>
-    --->
   </body>
 </html>
