--- a/musicians.html
+++ b/musicians.html
@@ -5,17 +5,18 @@
   </head>
   <body>
     <main role="main" class="container">
+      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
+        <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
+        <nav class="my-0 my-md-0 mr-md-3">
+          <a class="p-2 text-dark" href="/about.html">About</a>
+          <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
+          <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
+          <a class="p-2 text-dark" href="/">Home</a>
+        </nav>
+      </div>
       <div class="bg-white">
-        <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
-          <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
-          <nav class="my-0 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="/about.html">About</a>
-            <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
-            <a class="p-2 text-dark" href="#"><!---FAQ---></a>
-          </nav>
-        </div>
         <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
-        <p>Singers! Drummers! Gee-tar players! We’re excited for you to help turn our little city into a celebration of music on September 29. So, thanks for your interest, and we hope this information page will give you everything you need to get going.</p>
+        <p>Singers! Drummers! Gee-tar players! We're excited for you to help turn our little city into a celebration of music on September 29. So, thanks for your interest, and we hope this information page will give you everything you need to get going.</p>
         <p>Fill out this easy form and we will be in touch with a spot for you to play.</p>
         <p>You do not need to be a professional musician to play Porchfest. All skill levels are welcome.</p>
         <p>There is no payment for playing Porchfest. You may busk by putting out a case or tip jar at your show(s) and if you have merchandise, you may put it out for sale.</p>
