more fixes to header

--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
+
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/styles.css">
   </head>
   <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
-      <nav class="my-0 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/about.html">About</a>
-        <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
-        <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
-      </nav>
-    </div>
-    <div class="jumbotron jumbotron-fluid">
+    <main role="main" class="container">
       <div class="container mx-auto text-center">
-        <img src="/images/porchfest_logo.jpg" />
+        <img src="/images/porchfest_logo_trimmed.png" />
       </div>
       <div class="container mx-auto text-center">
-        <h1 class="display-4">Melrose Porchfest</h1>
-        <p class="lead">
-          Saturday, September 29, 2018
-        </p>
-        <p class="lead">
-        </p>
+          <nav class="my-0 my-md-0 mr-md-3 main_nav">
+            <a class="p-2 text-dark" href="/about.html">About</a>
+            <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
+            <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
+          </nav>
+        <h1>Saturday, September 29, 2018</h1>
       </div>
-    </div>
+      <div class="text-center">
+        <div style="width: 100%">
+          <iframe width="100%" height="600" src="https://www.google.com/maps/@42.4596366,-71.0640299,14z/data=!3m1!4b1!4m3!11m2!2s18Vik411zncFqvWbxj7Prqn144_s!3e3" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><br />
+      </div>
+    </main>
   </body>
 </html>
