--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <main role="main" class="container">
-      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
-        <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
-        <nav class="my-0 my-md-0 mr-md-3">
+      <div class="container mx-auto text-center">
+        <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
+        <nav class="my-0 my-md-0 mr-md-3 main_nav">
           <a class="p-2 text-dark" href="/about.html">About</a>
           <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
           <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
@@ -16,7 +16,6 @@
         </nav>
       </div>
       <div class="bg-white">
-        <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
         <h1>About Porchfest</h1>
         <p>Porchfest is a music festival that takes advantage of the "stages" all over a city or town. Musicians set up on the porch (or deck, driveway, or other place) and those passing by are treated to a concert. Pretty good, huh?</p>
         <p>Melrose Porchfest is September 29, from 2:00 pm - 6:00 pm. The rain date is September 30, from 2:00 pm - 6:00 pm.</p>
