--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <h1>Saturday, September 29, 2018</h1>
       </div>
       <div class="text-center">
-        <div style="width: 100%">
-          <iframe width="100%" height="600" src="https://www.google.com/maps/@42.4596366,-71.0640299,14z/data=!3m1!4b1!4m3!11m2!2s18Vik411zncFqvWbxj7Prqn144_s!3e3" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><br />
+        <a href="https://goo.gl/maps/HKs4fm5kZcH2" target="_"><img src="/images/porchfest_map.png" width="500" /></a>
       </div>
     </main>
   </body>
