adding in-line links

--- a/about.html
+++ b/about.html
@@ -23,15 +23,15 @@
         <h3>Do I need a ticket?</h3>
         <p>No, you silly goose. The shows are free. Some musicians will put out a tip jar and you can show them some love, if you feel so inclined.</p>
         <h3>Where will the music be?</h3>
-        <p>Check out the map of music for Melrose Porchfest 2018! [link to map]</p>
+        <p>Check out the <a href="https://goo.gl/maps/HKs4fm5kZcH2" target="_">map of music</a> for Melrose Porchfest 2018!</p>
         <h3>I have a band! How do I play?</h3>
-        <p>Hey! Cool! Check out the info page for musicians and then get in touch--we have a few spots left for 2018.</p>
+        <p>Hey! Cool! Check out the <a href="/musicians.html">info page for musicians</a> and then <a href="mailto:melroseporchfest@gmail.com">get in touch</a>--we have a few spots left for 2018.</p>
         <h3>I have a porch (or a driveway)! How do I host?</h3>
-        <p>You're the best! We're all full this year, but contact us and we'll add you to the mailing list for next year. That way you'll be the first to know about hosting opportunities for 2019.</p>
+        <p>You're the best! We're all full this year, but <a href="mailto:melroseporchfest@gmail.com">contact us</a> and we'll add you to the mailing list for next year. That way you'll be the first to know about hosting opportunities for 2019.</p>
         <h3>I want to help! What do you need?</h3>
         <p>A community event like Porchfest runs on volunteers. And you get to hear great music all day while helping your community enjoy a fun event! The basic roles for volunteers are to help people find their way around Porchfest and to contact the Porchfest organizing committee if something's not working at a porch (like a microphone isn't working or something). Pretty easy stuff, and lots of fun. If you'd like to volunteer, please contact us at melroseporchfest@gmail.com and thank you!!</p>
         <h3>How do I get the most up-to-date information?</h3>
-        <p>Please join our mailing list by emailing: melroseporchfest@gmail.com and requesting to be added. You can also give our facebook page a "like” and check out updates there.</p>
+        <p>Please join our mailing list by emailing: melroseporchfest@gmail.com and requesting to be added. You can also give <a href="https://www.facebook.com/MelrosePorchfest/?fb_dtsg_ag=AdyPyq8A4ycyge550fuoGyBawlXJGp69hHFfWVMq7kcfxg%3AAdwDeGvbFiiqgYyabK0diPBvhJRlinBnYCnLiZZS4_Og_Q" target="_">our facebook page</a> a "like” and check out updates there.</p>
     </div>
     </main>
   </body>
