--- a/hosts.html
+++ b/hosts.html
@@ -21,7 +21,7 @@
         <p><strong>Here are a few things to know:</strong></p>
         <p>"Porch" is a loose term. For the purposes of Porchfest: driveways, garages, and decks all count as "porches." Just so long as people in our community can easily access listening to music. In other words, if you have a deck, but the only way for people to get there is through your house and your mother in-law's room, this isn't a great fit. But if you don't have a porch, or have a small porch: improvise.</p>
         <p>Melrose Porchfest is from 2-6, but if you can only host from 2-3, that's fine! You determine when the music happens at your home.</p>
-        <p>If you know musicians, and can fill the slots you want to host, go for it. Just let us know who is playing at your house and when.</p>
+        <p>If you know musicians, and can fill the slots you want to host, go for it. Just <a href="mailto:melroseporchfest@gmail.com">let us know</a> who is playing at your house and when.</p>
         <p>If you need musicians to play your porch, we can help you. Just be clear on our sign up form with the times you can host and any preferences you have.</p>
         <p>We will not put your house on our website and map unless we hear from you. So if a friend of yours is in a band has asked you to host and you've said yes to them, but haven't told us anything, we need to hear from you.</p>
         <p>Usually, a band or musician will play for a 1 or 2 hour slot. We don't recommend acts playing for longer than that, unless your act is Bruce Springsteen.</p>
