changed musicians to just say we're full

--- a/musicians.html
+++ b/musicians.html
@@ -15,11 +15,7 @@
         </nav>
       </div>
       <div class="bg-white">
-        <p>Singers! Drummers! Gee-tar players! We're excited for you to help turn our little city into a celebration of music on September 29. So, thanks for your interest, and we hope this information page will give you everything you need to get going.</p>
-        <p>Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2Ka4t3c8hnIj0sG9qgmrTeR7VuLzKpg3DSqE-V8AiAXqh_g/viewform?usp=sf_link" target="_">this easy form</a> and we will be in touch with a spot for you to play.</p>
-        <p>You do not need to be a professional musician to play Porchfest. All skill levels are welcome.</p>
-        <p>There is no payment for playing Porchfest. You may busk by putting out a case or tip jar at your show(s) and if you have merchandise, you may put it out for sale.</p>
-        <p>What else are you wondering? <a href="mailto:melroseporchfest@gmail.com">Drop us a line</a>.</p>
+        <p><strong>We are full for 2018! Thanks to all of our hosts! But, if you are interested in hosting, read on, and maybe you can do it next year.</strong></p>
     </div>
     </main>
   </body>
