new embedded map

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           </nav>
         <h1>Saturday, September 29, 2018</h1>
       </div>
-      <div class="text-center">
-        <a href="https://goo.gl/maps/HKs4fm5kZcH2" target="_"><img src="/images/porchfest_map.png" width="500" /></a>
+      <div class="text-center embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.google.com/maps/d/embed?mid=1fujjanIVI6ngTq0JGEFDUIJWJp6FOldk&hl=en"></iframe>
       </div>
     </main>
   </body>
