adding the schedule

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       </div>
       <div class="container mx-auto text-center">
           <nav class="my-0 my-md-0 mr-md-3 main_nav">
+            <a class="p-2 text-dark" href="/schedule.html">Schedule</a>
             <a class="p-2 text-dark" href="/about.html">About</a>
             <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
             <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
