--- a/musicians.html
+++ b/musicians.html
@@ -8,6 +8,7 @@
       <div class="container mx-auto text-center">
         <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
         <nav class="my-0 my-md-0 mr-md-3 main_nav">
+          <a class="p-2 text-dark" href="/about.html">Schedule</a>
           <a class="p-2 text-dark" href="/about.html">About</a>
           <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
           <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
