fixing header image

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
     <main role="main" class="container">
       <div class="container mx-auto text-center">
-        <img src="/images/porchfest_logo_trimmed.png" />
-      </div>
-      <div class="container mx-auto text-center">
+          <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
           <nav class="my-0 my-md-0 mr-md-3 main_nav">
             <a class="p-2 text-dark" href="/schedule.html">Schedule</a>
             <a class="p-2 text-dark" href="/about.html">About</a>
