--- a/schedule.html
+++ b/schedule.html
@@ -59,7 +59,7 @@
         </div>
         <div class="schedule_row">
           <div class="houses">58 Albion St</div>
-          <div class="two_hours">Junko Ogawa, Rick Goggin, Branson Bofat</br>(Folk / Blues)</div>
+          <div class="two_hours"><a href="http://junkosings.com" target="_blank">Junko Ogawa, Rick Goggin, Branson Bofat</a></br>(Folk / Blues)</div>
           <div class="hour">Mr. Shammi</br>(Reggae / Fusion)</div>
           <div class="hour"></div>
         </div>
@@ -68,7 +68,7 @@
           <div class="hour"></div>
           <div class="hour"></div>
           <div class="hour">Linen & Lace</br>(18th Century / Celtic)</div>
-          <div class="hour"></div>
+          <div class="hour"><a href="https://www.instagram.com/avas_music3/?utm_source=ig_profile_share&igshid=1j01aiu9s58tn" target="_blank">Ava Lopresti</a></br>(Pop Hits)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">47 Porter St</div>
@@ -96,23 +96,23 @@
         </div>
         <div class="schedule_row">
           <div class="houses">31 Stevens Rd</div>
-          <div class="hour_and_half">Madam Bruja</div>
-          <div class="half_hour"></div>
-          <div class="hour_and_half">Tail</div>
-          <div class="half_hour"></div>
+          <div class="hour"><a href="https://biggiantmusic.bandcamp.com/" target="_blank">Madam Bruja</a></div>
+          <div class="hour"><a href="https://biggiantmusic.bandcamp.com/" target="_blank">Big Giant</a></br>(Alt Rock)</div>
+          <div class="two_hours"><a href="https://www.tailband.com/" target="_blank">Tail</a></br>(Americana / Bluegrass)</a></div>
         </div>
         <div class="schedule_row">
           <div class="houses">12 Bartlett St</div>
-          <div class="hour"></div>
-          <div class="hour"></div>
-          <div class="hour">Sam Chetkin</div>
+          <div class="hour">Cool Fool</div>
+          <div class="half_hour"><a href="https://we.riseup.net/naafizah/about-naafizah" target="_blank">Naafizah</a></br>(Arabic / Turkish)</div>
+          <div class="half_hour"></div>
+          <div class="hour"><a href="https://www.facebook.com/SamChetkinMusic/" target="_blank">Sam Chetkin</a></br>(Singer/Songwriter)</div>
           <div class="hour"><a href="http://www.youtube.com/user/bb5877" target="_blank">Bill Barasso</a></br>(Easy Listening / Acoustic R&B)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">135 Mt Vernon Ave</div>
           <div class="hour"><a href="https://www.facebook.com/BourbonChasersBand/" target="_blank">The Bourbon Chasers</a> / Alaskan Hustle</br>(Rock)</div>
-          <div class="hour"><a href="https://moockmusic.com/" target="_blank">Alastair Moock & Friends</a> / DJ Fritz</br>(Blues, Folk)</div>
-          <div class="hour">Mark Bates / <a href="https://thealmightybuckmusic.bandcamp.com/releases" target="_blank">The Almighty Buck</a></br>(Rock)</div>
+          <div class="hour">Mark Bates / DJ Fritz</br>(Rock)</div>
+          <div class="hour"><a href="https://thealmightybuckmusic.bandcamp.com/releases" target="_blank">The Almighty Buck</a></br>(Rock)</div>
           <div class="hour"><a href="http://www.zackbolles.com/" target="_blank">Zack Bolles</a> / <a href="https://www.facebook.com/coldcarmusic/" target="_blank">Cold Car</a></br>(Rock)</div>
         </div>
         <div class="schedule_row">
@@ -126,7 +126,7 @@
           <div class="hour"><a href="https://m.soundcloud.com/user-744447514" target="_blank">Jon Tracy & The Postman</a></br>(Alternative Rock)</div>
           <div class="hour"><a href="http://prateeksongs.com" target="_blank">Prateek Poddar</a></br>(Singer/Songwriter)</div>
           <div class="hour">Eamon Sheehan</div>
-          <div class="hour">Bohemians</br>(Americana)</div>
+          <div class="hour"><a href="https://www.facebook.com/BoHoSongs/?ref=bookmarks" target="_blank">Bohemians</a></br>(Americana)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">34 Cleveland St</div>
@@ -138,22 +138,25 @@
           <div class="houses">5 North High St</div>
           <div class="hour"></div>
           <div class="hour">Sean Connolly</br>(Singer/Songwriter)</div>
-          <div class="two_hours">The Ways and Means Committee</br>(Roots & Blues Rock)</div>
+          <div class="two_hours"><a href="https://www.facebook.com/TheWaysAndMeansCommittee/" target="_blank">The Ways and Means Committee</a></br>(Roots & Blues Rock)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">40 West Wyoming Ave</div>
-          <div class="four_hours">Bill McQuade</br>(Folk / Blues)</div>
+          <div class="hour"><a href="https://www.youtube.com/watch?v=Nhx0zyFCIt4" target="_blank">Sammy McQuaid</a> + <a href="https://www.youtube.com/watch?v=rbzvhAKK4lg" target="_blank">Bill McQuaid</a></br>(Rockabilly, Surf, Folk, Blues)</div>
+          <div class="hour"><a href="https://store.cdbaby.com/cd/edwardloechler" target="_blank">High Maintenance Jug Band</a></br>(Jug Band)</div>
+          <div class="hour_and_half"><a href="https://www.youtube.com/watch?v=Nhx0zyFCIt4" target="_blank">Sammy McQuaid</a> + <a href="https://www.youtube.com/watch?v=rbzvhAKK4lg" target="_blank">Bill McQuaid</a></br>(Rockabilly, Surf, Folk, Blues)</div>
+          <div class="half_hour"></div>
         </div>
         <div class="schedule_row">
           <div class="houses">18 Bellevue Ave</div>
           <div class="hour"></div>
-          <div class="hour"></div>
+          <div class="hour"><a href="https://astroal.bandcamp.com/" target="_blank">Astrol Al</a></div>
           <div class="hour">The Knock Ups</br>(Glam Punk)</div>
           <div class="hour"><a href="http://genedante.com" target="_blank">Gene Dante</a></br>(Acoustic)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">30 Vine St</div>
-          <div class="hour"></div>
+          <div class="hour"><a href="https://www.youtube.com/watch?v=CdFMio_WJBg&feature=youtu.be" target="_blank">Joe Cataldo</a></br>(Singer/Songwriter)</div>
           <div class="half_hour"></div>
           <div class="hour"><a href="https://www.facebook.com/noelsmyth2012" target="_blank">Noel Smyth</a></br>(Folk Rock)</div>
           <div class="half_hour"></div>
@@ -161,9 +164,9 @@
         </div>
         <div class="schedule_row">
           <div class="houses">167 Florence St</div>
-          <div class="hour"></div>
-          <div class="hour"></div>
-          <div class="hour"></div>
+          <div class="hour_and_half"><a href="https://youtu.be/D2f5nYaywc0" target="_blank">Luckless Pedestrians</a></br>(Steely Dan)</div>
+          <div class="half_hour"><a href="https://soundcloud.com/2kjb" target="_blank">Joe Brown</a></br>(Synth Experimentation)</div>
+          <div class="two_hours"><a href="https://www.facebook.com/pg/Jiblantos/about/" target="_blank">Jiblantos</a></br>(Blues, Country, Swing, Rock)</div>
           <div class="hour"></div>
         </div>
         <div class="schedule_row">
