--- a/schedule.html
+++ b/schedule.html
@@ -41,7 +41,7 @@
           <div class="houses">164 Howard St</div>
           <div class="hour"><a href="http://lindamarksmusic.com" target="_blank">Linda Marks & Terry Smith</a></br>(Jazz / Folk)</div>
           <div class="hour_and_half">Eddie Miller & Dan Abreu</br>(Acoustic)</div>
-          <div class="hour_and_half">Mike Gent</br>(Rock / Acoustic)</div>
+          <div class="hour_and_half"><a href="http://thefiggs.net/" target="_blank">Mike Gent</a></br>(Rock / Acoustic)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">250 Grove St</div>
@@ -82,8 +82,7 @@
         </div>
         <div class="schedule_row">
           <div class="houses">100 Derby Rd</div>
-          <div class="hour">Casey LJ</br>(Singer/Songwriter, Rock, Soul, Jazz)</div>
-          <div class="hour"></div>
+          <div class="two_hours">Casey LJ</br>(Singer/Songwriter, Rock, Soul, Jazz)</div>
           <div class="hour"><a href="https://www.kathleenhealy.com/" target="_blank">Kathleen Healy</a></br>(Singer/Songwriter)</div>
           <div class="hour"></div>
         </div>
@@ -130,14 +129,14 @@
         </div>
         <div class="schedule_row">
           <div class="houses">34 Cleveland St</div>
-          <div class="hour_and_half">The Former Elves</br>(Acoustic Space Rock)</div>
-          <div class="hour_and_half">The Resurrectionists</br>(Psychodelic Roots Rock)</div>
+          <div class="two_hours">The Former Elves</br>(Acoustic Space Rock)</div>
+          <div class="hour"></div>
           <div class="hour">Johanna Lake</br>(Indie Pop / Rock / Soft Jazz)</div>
         </div>
         <div class="schedule_row">
           <div class="houses">5 North High St</div>
           <div class="hour"></div>
-          <div class="hour">Sean Connolly</br>(Singer/Songwriter)</div>
+          <div class="hour"><a href="https://sconnolly83.wixsite.com/seanpatrickconnolly" target="_blank">Sean Connolly</a></br>(Singer/Songwriter)</div>
           <div class="two_hours"><a href="https://www.facebook.com/TheWaysAndMeansCommittee/" target="_blank">The Ways and Means Committee</a></br>(Roots & Blues Rock)</div>
         </div>
         <div class="schedule_row">
@@ -167,7 +166,6 @@
           <div class="hour_and_half"><a href="https://youtu.be/D2f5nYaywc0" target="_blank">Luckless Pedestrians</a></br>(Steely Dan)</div>
           <div class="half_hour"><a href="https://soundcloud.com/2kjb" target="_blank">Joe Brown</a></br>(Synth Experimentation)</div>
           <div class="two_hours"><a href="https://www.facebook.com/pg/Jiblantos/about/" target="_blank">Jiblantos</a></br>(Blues, Country, Swing, Rock)</div>
-          <div class="hour"></div>
         </div>
         <div class="schedule_row">
           <div class="houses bottom_row">65 Cleveland Street</div>
