fixing astrol al

--- a/schedule.html
+++ b/schedule.html
@@ -149,7 +149,7 @@
         <div class="schedule_row">
           <div class="houses">18 Bellevue Ave</div>
           <div class="hour"></div>
-          <div class="hour"><a href="https://astroal.bandcamp.com/" target="_blank">Astrol Al</a></div>
+          <div class="hour"><a href="https://astroal.bandcamp.com/" target="_blank">Astrol Al</br>(Halloween Music)</a></div>
           <div class="hour">The Knock Ups</br>(Glam Punk)</div>
           <div class="hour"><a href="http://genedante.com" target="_blank">Gene Dante</a></br>(Acoustic)</div>
         </div>
