Changing to 'for hosts' in global header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a class="p-2 text-dark" href="/schedule.html">Schedule</a>
             <a class="p-2 text-dark" href="/about.html">About</a>
             <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
-            <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
+            <a class="p-2 text-dark" href="/hosts.html">For Hosts</a>
           </nav>
         <h1>Thanks for a great first porchfest!</br>
           Save the date for next year: Saturday, September 28, 2019</h1>
