--- a/musicians.html
+++ b/musicians.html
@@ -11,7 +11,7 @@
           <a class="p-2 text-dark" href="/about.html">Schedule</a>
           <a class="p-2 text-dark" href="/about.html">About</a>
           <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
-          <a class="p-2 text-dark" href="/hosts.html">Hosts</a>
+          <a class="p-2 text-dark" href="/hosts.html">For Hosts</a>
           <a class="p-2 text-dark" href="/">Home</a>
         </nav>
       </div>
