updating homepage copy

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
             <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
             <a class="p-2 text-dark" href="/hosts.html">For Hosts</a>
           </nav>
-        <h1>Thanks for a great first porchfest!</br>
-          Save the date for next year: Saturday, September 28, 2019</h1>
+        <h1>Save the date: Saturday, September 28, 2019. 2-6pm</h1>
       </div>
-      <div class="text-center embed-responsive embed-responsive-16by9">
-        <iframe src="https://www.google.com/maps/d/embed?mid=1fujjanIVI6ngTq0JGEFDUIJWJp6FOldk&hl=en"></iframe>
+      <div class="text-center bg-white">
+         <p>The Melrose Porchfest gathers musicians from in and around the Melrose community to perform on various porches and backyards. People of all ages are welcome to the many locations around town where artists will be performing in a celebration of music and our neighborhoods. It is a great way to support local artists, have fun, and enjoy our great city.</p>
       </div>
     </main>
   </body>
