new about page copy

--- a/about.html
+++ b/about.html
@@ -18,21 +18,22 @@
       </div>
       <div class="bg-white">
         <h1>About Porchfest</h1>
-        <p>Porchfest is a music festival that takes advantage of the "stages" all over a city or town. Musicians set up on the porch (or deck, driveway, or other place) and those passing by are treated to a concert. Pretty good, huh?</p>
-        <p>Melrose Porchfest is September 29, from 2:00 pm - 6:00 pm. The rain date is September 30, from 2:00 pm - 6:00 pm.</p>
+        <p>Melrose Porchfest is September 28, from 2:00 pm - 6:00 pm. The rain date is September 29, from 2:00 pm - 6:00 pm.</p>
         <h2>Some common questions include...</h2>
         <h3>Do I need a ticket?</h3>
         <p>No, you silly goose. The shows are free. Some musicians will put out a tip jar and you can show them some love, if you feel so inclined.</p>
         <h3>Where will the music be?</h3>
-        <p>Check out the <a href="https://goo.gl/maps/HKs4fm5kZcH2" target="_">map of music</a> for Melrose Porchfest 2018!</p>
+        <p>Check out the <a href="https://goo.gl/maps/HKs4fm5kZcH2" target="_blank">map of music</a> for Melrose Porchfest 2019!</p>
         <h3>I have a band! How do I play?</h3>
         <p>Hey! Cool! Check out the <a href="/musicians.html">info page for musicians</a> and then <a href="mailto:melroseporchfest@gmail.com">get in touch</a>--we have a few spots left for 2018.</p>
         <h3>I have a porch (or a driveway)! How do I host?</h3>
-        <p>You're the best! We're all full this year, but <a href="mailto:melroseporchfest@gmail.com">contact us</a> and we'll add you to the mailing list for next year. That way you'll be the first to know about hosting opportunities for 2019.</p>
+        <p>Please complete <a href="https://forms.gle/GvhRAG4m5S91pSth8" target="_blank">this form</a> to contact us and thank you!!</p>
         <h3>I want to help! What do you need?</h3>
         <p>A community event like Porchfest runs on volunteers. And you get to hear great music all day while helping your community enjoy a fun event! The basic roles for volunteers are to help people find their way around Porchfest and to contact the Porchfest organizing committee if something's not working at a porch (like a microphone isn't working or something). Pretty easy stuff, and lots of fun. If you'd like to volunteer, please contact us at melroseporchfest@gmail.com and thank you!!</p>
         <h3>How do I get the most up-to-date information?</h3>
-        <p>Please join our mailing list by emailing: melroseporchfest@gmail.com and requesting to be added. You can also give <a href="https://www.facebook.com/MelrosePorchfest/?fb_dtsg_ag=AdyPyq8A4ycyge550fuoGyBawlXJGp69hHFfWVMq7kcfxg%3AAdwDeGvbFiiqgYyabK0diPBvhJRlinBnYCnLiZZS4_Og_Q" target="_">our facebook page</a> a "like” and check out updates there.</p>
+        <p>Please join our mailing list by emailing: melroseporchfest@gmail.com and requesting to be added. You can also give <a href="https://www.facebook.com/MelrosePorchfest/?fb_dtsg_ag=AdyPyq8A4ycyge550fuoGyBawlXJGp69hHFfWVMq7kcfxg%3AAdwDeGvbFiiqgYyabK0diPBvhJRlinBnYCnLiZZS4_Og_Q" target="_">our facebook page</a> a "like" and check out updates there.</p>
+        <h3>Press and Media</h3>
+        <p><a href="https://melrose.wickedlocal.com/news/20181003/melrose-porchfest-2018-kicks-off-new-tradition?fbclid=IwAR09a7fC2ANiSv5YUrpiZHVhxlny3dYuW8HSEP2BFJkWCSuG5PGRSqrC_rE" target="_blank">Wicked Local</a></p>
     </div>
     </main>
   </body>
