new musicians copy

--- a/musicians.html
+++ b/musicians.html
@@ -15,9 +15,7 @@
           <a class="p-2 text-dark" href="/">Home</a>
         </nav>
       </div>
-      <div class="bg-white">
-        <p><strong>We are full for 2018! Thanks to all of our hosts! But, if you are interested in hosting, read on, and maybe you can do it next year.</strong></p>
-    </div>
+        <div class="text-center bg-white">Please fill out <a href="https://forms.gle/x1T7jaAja9DWBsFD7" target="_blank">this form</a> to contact us about being a musician at this year's event.</p></div>
     </main>
   </body>
 </html>
