updating for hosts copy

--- a/hosts.html
+++ b/hosts.html
@@ -17,7 +17,7 @@
         </nav>
       </div>
       <div class="bg-white">
-        <p><strong>We are full for 2018! Thanks to all of our hosts! But, if you are interested in hosting, read on, and maybe you can do it next year.</strong></p>
+        <p><strong>Ready to host? - <a href="https://forms.gle/qKv6WppjeMADFjWEA" target="_blank">apply here.</a></strong></p>
         <p>So, you've always wanted to host a concert? Now's your chance! Porchfest is easy and fun and, as the host, you determine just what you want to do.</p>
         <p><strong>Here are a few things to know:</strong></p>
         <p>"Porch" is a loose term. For the purposes of Porchfest: driveways, garages, and decks all count as "porches." Just so long as people in our community can easily access listening to music. In other words, if you have a deck, but the only way for people to get there is through your house and your mother in-law's room, this isn't a great fit. But if you don't have a porch, or have a small porch: improvise.</p>
