--- a/schedule.html
+++ b/schedule.html
@@ -9,14 +9,14 @@
       <div class="container mx-auto text-center">
         <img class="d-block mx-auto mb-4 img-fluid" src="/images/porchfest_logo_trimmed.png" alt="">
         <nav class="my-0 my-md-0 mr-md-3 main_nav">
-          <a class="p-2 text-dark" href="/about.html">Schedule</a>
+          <a class="p-2 text-dark" href="/schedule.html">Schedule</a>
           <a class="p-2 text-dark" href="/about.html">About</a>
           <a class="p-2 text-dark" href="/musicians.html">Musicians</a>
           <a class="p-2 text-dark" href="/hosts.html">For Hosts</a>
           <a class="p-2 text-dark" href="/">Home</a>
         </nav>
       </div>
-        <div class="text-center bg-white">We will be updating our 2019 schedule soon.</div>
+      <div class="text-center bg-white">We will be updating our 2019 schedule soon.</div>
     </main>
   </body>
 </html>
