--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,115 @@
           <a class="p-2 text-dark" href="/">Home</a>
         </nav>
       </div>
-      <div class="text-center bg-white">We will be updating our 2019 schedule soon.</div>
+      <div class="text-center bg-white">
+				<table class="table">
+					<tr>
+						<td>250 Grove Street Gooch St between Grove and Laurel.</td>
+						<td><a href="https://www.facebook.com/AmericanBeautiesBand" target="_blank">American Beauties</a>: 2 - 3 PM</td>
+						<td><a href="https://www.facebook.com/rootdownband" target="_blank">Root Down</a>: 3 - 4:30 PM</td>
+						<td><a href="https://www.facebook.com/TadOverbaugh" target="_blank">Tad &amp; The Late Arrivals</a>: 5 - 6 PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>8 Allen Place</td>
+						<td>Sick, Sad and Lonesome: 2 - 3 PM</td>
+						<td>Wheezer Stripes 3 - 4 PM</td>
+						<td>Commuter Wails: 4 - 5 PM</td>
+						<td>The Sound Down Cellar: 5 - 6 PM</td>
+					</tr>
+					<tr>
+						<td>100 Cottage Street</td>
+						<td>ETC: 2 - 3 PM</td>
+						<td><a href="https://www.facebook.com/artisancheesetheband" target="_blank">Artisan Cheese</a>[: 3 - 4:30 PM</td>
+						<td><a href="https://www.facebook.com/RayLirianoLaLiga" target="_blank">Ray Liriano Experience</a>: 4:30 - 6PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>164 Howard Street</td>
+						<td>Johnny and the Machine</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>15 Morgan Street</td>
+						<td>Misc Bands: 2- 3 PM</td>
+						<td>Eamonn Sheehan: 3 - 4 PM</td>
+						<td><a href="https://www.youtube.com/watch?v=owF86LPnM_E" target="_blank">J. Van Cleave</a>: 4 - 5 PM</td>
+						<td>Bohemians: 5 -5 6 PM</td>
+					</tr>
+					<tr>
+						<td>34 Cleveland Street</td>
+						<td>Torres Mouth: 2 - 4 PM</td>
+						<td><a href="http://www.theresurrectionists.bandcamp.com" target="_blank">The Resurrectionists</a>: 4 - 6 PM</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>40 West Wyoming Ave</td>
+						<td>Bill McQuaid</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>18 Bellevue Ave</td>
+						<td>The Jury's Out: 2 - 4 PM</td>
+						<td><a href="https://www.facebook.com/willdepianomusic/" target="_blank">Will DePiano</a>: 4 - 5PM<br/>https://youtu.be/A_MMR0BcqWs</td>
+						<td>Jennie Wengrovius: 5 -5 6 PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>30 Vine Street</td>
+						<td>No Relation: 2 - 3:30 PM</td>
+						<td><a href="https://www.facebook.com/noelsmyth2012" target="_blank">Noel Smyth and Co</a>: 3:30 - 4:30 PM</td>
+						<td>The Mark CataldoTrio: 4:30 - 6 PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>245 West Wyoming Ave</td>
+						<td><a href="http://lindamarksmusic.com" target="_blank">Linda Marks</a>: 2 - 3 PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>1 North High street</td>
+						<td><a href="https://www.youtube.com/watch?v=6y7NoGYFWrM" target="_blank">Sean Connolly</a>: 2 - 4 PM</td>
+						<td>Father &amp; Son: 4 - 6 PM</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>39 Mystic Ave</td>
+						<td>Aaron Spransy: 2 - 3 PM</td>
+						<td>Porchquest: 3 - 4 PM</td>
+						<td>The Erlenmeyers: 4 - 6 PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>112 Upham</td>
+						<td>Girl Skull: 2 - 3 PM</td>
+						<td><a href="https://www.facebook.com/powerslutband/" target="_blank">PowerSlut</a>: 3 - 4 PM<br/>https://powerslut.bandcamp.com/</td>
+						<td><a href="https://facebook.com/profile.php?id=1535309643359021&ref=content_filter" target="_blank">Madam Bruja</a>: 4 - 5 PM<br/>https://madambruja.bandcamp.com/releases Ma</td>
+						<td><a href="https://www.facebook.com/skibunnyw4m/" target="_blank">Ski Bunny</a>: 5 - 6 PM<br/>https://skibunnyw4m.com/</td>
+					</tr>
+					<tr>
+						<td>70 East Emerson</td>
+						<td>TuttaCrumbs</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>65 Cleveland Street (one band only)</td>
+						<td>The Bag Boys: 5 - 6 PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
     </main>
   </body>
 </html>
