--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,7 @@
         </nav>
       </div>
       <div class="text-center bg-white">
-				<table class="table">
+				<table class="table table-striped table-bordered">
 					<tr>
 						<td>250 Grove Street Gooch St between Grove and Laurel.</td>
 						<td><a href="https://www.facebook.com/AmericanBeautiesBand" target="_blank">American Beauties</a>: 2 - 3 PM</td>
@@ -70,7 +70,7 @@
 					<tr>
 						<td>18 Bellevue Ave</td>
 						<td>The Jury's Out: 2 - 4 PM</td>
-						<td><a href="https://www.facebook.com/willdepianomusic/" target="_blank">Will DePiano</a>: 4 - 5PM<br/>https://youtu.be/A_MMR0BcqWs</td>
+						<td><a href="https://www.facebook.com/willdepianomusic/" target="_blank">Will DePiano</a>: 4 - 5PM<br/><br/><a href="https://youtu.be/A_MMR0BcqWs" target="_blank">https://youtu.be/A_MMR0BcqWs</a></td>
 						<td>Jennie Wengrovius: 5 -5 6 PM</td>
 						<td></td>
 					</tr>
@@ -105,9 +105,9 @@
 					<tr>
 						<td>112 Upham</td>
 						<td>Girl Skull: 2 - 3 PM</td>
-						<td><a href="https://www.facebook.com/powerslutband/" target="_blank">PowerSlut</a>: 3 - 4 PM<br/>https://powerslut.bandcamp.com/</td>
-						<td><a href="https://facebook.com/profile.php?id=1535309643359021&ref=content_filter" target="_blank">Madam Bruja</a>: 4 - 5 PM<br/>https://madambruja.bandcamp.com/releases Ma</td>
-						<td><a href="https://www.facebook.com/skibunnyw4m/" target="_blank">Ski Bunny</a>: 5 - 6 PM<br/>https://skibunnyw4m.com/</td>
+						<td><a href="https://www.facebook.com/powerslutband/" target="_blank">PowerSlut</a>: 3 - 4 PM<br/><br/><a href="https://powerslut.bandcamp.com/" target="_blank">https://powerslut.bandcamp.com/</a></td>
+						<td><a href="https://facebook.com/profile.php?id=1535309643359021&ref=content_filter" target="_blank">Madam Bruja</a>: 4 - 5 PM<br/><br/><a href="https://madambruja.bandcamp.com/releases" target="_blank">https://madambruja.bandcamp.com/releases</a></td>
+						<td><a href="https://www.facebook.com/skibunnyw4m/" target="_blank">Ski Bunny</a>: 5 - 6 PM<br/><br/><a href="https://skibunnyw4m.com/" target="_blank">https://skibunnyw4m.com/</a></td>
 					</tr>
 					<tr>
 						<td>70 East Emerson</td>
